# bavar

./: .gitignore  DEV.md  GUIDE.md  Makefile  README.md  bavar.opam  build.dist.ml  dune-project
color_text/: color_text.ml  dune
lib/: build_context.ml  builder.ml  clangd.ml  codegen.ml  color_text.ml  compiler_args.ml  dependency.ml  dune  integrations.ml  project.ml  project_config.ml  project_resolver.ml  project_unit.ml  resolver.ml  resource_import.ml  toolchain.ml  util.ml
test/: dune
tools/: bmp2bit
